--- a/compose.yaml
+++ b/compose.yaml
@@ -8,6 +8,8 @@ services:
       - 'MYSQL_USER=siru'
     ports:
       - '3306:3306'
+    networks:
+      - ournet
 
   redis:
     hostname: redis
@@ -16,3 +18,9 @@ services:
     command: redis-server --requirepass siruchat --port 6379
     ports:
       - 6379:6379
+    networks:
+      - ournet
+
+networks:
+  ournet:
+    driver: bridge
