--- a/compose.yaml
+++ b/compose.yaml
@@ -73,6 +73,12 @@ services:
     ports:
       - 5672:5672
       - 15672:15672
+      - 61613:61613
+    command: >
+      bash -c "
+        rabbitmq-plugins enable --offline rabbitmq_stomp rabbitmq_web_stomp &&
+        docker-entrypoint.sh rabbitmq-server
+      "
     environment:
       RABBITMQ_ERLANG_COOKIE: RabbitMQ-My-Cookies
       RABBITMQ_DEFAULT_USER: admin
