--- a/compose.yaml
+++ b/compose.yaml
@@ -86,6 +86,33 @@ services:
     networks:
       - ournet
 
+  prometheus:
+    image: prom/prometheus:latest
+    container_name: prometheus
+    ports:
+      - "9090:9090"
+    volumes:
+      - ./prometheus.yml:/etc/prometheus/prometheus.yml
+      - type: volume
+        source: PROMETHEUS_DATA
+        target: /prometheus
+    networks:
+      - ournet
+
+  grafana:
+    image: grafana/grafana:latest
+    container_name: grafana
+    ports:
+      - "3000:3000"
+    volumes:
+      - type: volume
+        source: GRAFANA_DATA
+        target: /var/lib/grafana
+    depends_on:
+      - prometheus
+    networks:
+      - ournet
+
 networks:
   ournet:
     driver: bridge
@@ -103,3 +130,7 @@ volumes:
     name: RABBITMQ_DATA
   RABBITMQ_LOG:
     name: RABBITMQ_LOG
+  PROMETHEUS_DATA:
+    name: PROMETHEUS_DATA
+  GRAFANA_DATA:
+    name: GRAFANA_DATA
