--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -3,9 +3,9 @@ spring:
     name: siruchat
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://mysql:3306/siruchat
-    username: siru
-    password: secret
+    url: jdbc:mysql://${{secrets.MYSQL_HOST}}:3306/${{secrets.MYSQL_DATABASE}}
+    username: ${{secrets.USER}}
+    password: ${{secrets.PASSWORD}}
   jpa:
     show-sql: true
     hibernate:
@@ -19,10 +19,10 @@ spring:
       namespace: siruchat:session
 
   rabbitmq:
-    host: rabbitmq-stream
-    port: 5672
-    username: admin
-    password: rabbitpassword
+    host: ${{secrets.RABBITMQ_HOST}}
+    port: ${{secrets.RABBITMQ_PORT}}
+    username: ${{secrets.RABBITMQ_USERNAME}}
+    password: ${{secrets.RABBITMQ_PASSWORD}}
     chat:
       exchange: chat.topic.exchange
       queue: chat.queue
@@ -32,14 +32,14 @@ spring:
 
   data:
     redis:
-      host: redis
-      password: siruchat
+      host: ${{secrets.REDIS_HOST}}
+      password: ${{secrets.REDIS_PASSWORD}}
       port: 6379
       repositories:
         enabled: true
     mongodb:
-      uri: mongodb://admin:admin@localhost:27017
-      database: db
+      uri: mongodb://${{secrets.MONGO_USERNAME}}:${{secrets.MONGO_PASSWORD}}@${{secrets.MONGO_HOST}}:27017
+      database: ${{secrets.MONGO_DB}}
 
 management:
   endpoints:
@@ -49,7 +49,7 @@ management:
 
 jwt:
   secret:
-    key: "baesiru_siruchat_secretkey_dev_verysecret"
+    key: ${{secrets.JWT_SECRET}}
   access-token:
     plus-hour: 1
   refresh-token:
