--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -4,8 +4,8 @@ spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://${{secrets.MYSQL_HOST}}:3306/${{secrets.MYSQL_DATABASE}}
-    username: ${{secrets.USER}}
-    password: ${{secrets.PASSWORD}}
+    username: ${{secrets.MYSQL_USERNAME}}
+    password: ${{secrets.MYSQL_PASSWORD}}
   jpa:
     show-sql: true
     hibernate:
