--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -3,9 +3,9 @@ spring:
     name: siruchat
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://${{secrets.MYSQL_HOST}}:3306/${{secrets.MYSQL_DATABASE}}
-    username: ${{secrets.MYSQL_USERNAME}}
-    password: ${{secrets.MYSQL_PASSWORD}}
+    url: jdbc:mysql://${{MYSQL_HOST}}:3306/${{secrets.MYSQL_DATABASE}}
+    username: ${{MYSQL_USER}}
+    password: ${{MYSQL_PASSWORD}}
   jpa:
     show-sql: true
     hibernate:
@@ -19,10 +19,10 @@ spring:
       namespace: siruchat:session
 
   rabbitmq:
-    host: ${{secrets.RABBITMQ_HOST}}
-    port: ${{secrets.RABBITMQ_PORT}}
-    username: ${{secrets.RABBITMQ_USERNAME}}
-    password: ${{secrets.RABBITMQ_PASSWORD}}
+    host: ${{RABBITMQ_HOST}}
+    port: ${{RABBITMQ_PORT}}
+    username: ${{RABBITMQ_USERNAME}}
+    password: ${{RABBITMQ_PASSWORD}}
     chat:
       exchange: chat.topic.exchange
       queue: chat.queue
@@ -32,14 +32,14 @@ spring:
 
   data:
     redis:
-      host: ${{secrets.REDIS_HOST}}
-      password: ${{secrets.REDIS_PASSWORD}}
+      host: ${{REDIS_HOST}}
+      password: ${{REDIS_PASSWORD}}
       port: 6379
       repositories:
         enabled: true
     mongodb:
-      uri: mongodb://${{secrets.MONGO_USERNAME}}:${{secrets.MONGO_PASSWORD}}@${{secrets.MONGO_HOST}}:27017
-      database: ${{secrets.MONGO_DB}}
+      uri: mongodb://${{MONGO_USERNAME}}:${{MONGO_PASSWORD}}@${{MONGO_HOST}}:27017
+      database: ${{MONGO_DB}}
 
 management:
   endpoints:
@@ -49,7 +49,7 @@ management:
 
 jwt:
   secret:
-    key: ${{secrets.JWT_SECRET}}
+    key: ${{JWT_SECRET}}
   access-token:
     plus-hour: 1
   refresh-token:
