--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -6,17 +6,14 @@ on:
       - dev
 
 env:
-  # Docker Hub 레포지토리 정보 (본인의 Docker Hub 사용자 이름과 프로젝트 이름으로 변경)
   DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
   DOCKER_IMAGE_NAME: ${{ secrets.DOCKER_USERNAME }}/siruchat-app
 
-  # EC2 접속 정보 (GitHub Secrets에서 가져옴)
   EC2_HOST: ${{ secrets.EC2_HOST }}
-  EC2_USER: ec2-user # AWS Linux/UNIX 기본 사용자
+  EC2_USER: ec2-user
   EC2_SSH_KEY: ${{ secrets.EC2_SSH_KEY }}
 
-  APP_PORT: 8080
-  HOST_PORT: 80
+  PROJECT_DIR_ON_EC2: /home/${{ secrets.EC2_USER }} # compose.yaml이 있는 폴더
 
 jobs:
   build-and-push:
@@ -49,51 +46,52 @@ jobs:
         with:
           context: .
           push: true
-          tags: ${{ env.DOCKER_IMAGE_NAME }}:${{ github.sha }} # 커밋 SHA를 태그로 사용
-          # 최신 버전 태그도 추가하고 싶다면:
-          # tags: |
-          #   ${{ env.DOCKER_IMAGE_NAME }}:latest
-          #   ${{ env.DOCKER_IMAGE_NAME }}:${{ github.sha }}
+          tags: ${{ env.DOCKER_IMAGE_NAME }}:${{ github.sha }}
+
 
   deploy:
     runs-on: ubuntu-latest
-    needs: build-and-push # build-and-push 작업이 성공적으로 완료된 후 실행
+    needs: build-and-push
     steps:
-      - name: Deploy to EC2
+      - name: Checkout code (to access Dockerfile for build context on EC2)
+        uses: actions/checkout@v4 # Dockerfile과 빌드 결과(JAR)를 EC2에 복사하기 위함
+
+      - name: Deploy with Docker Compose on EC2
         uses: appleboy/ssh-action@master
         with:
           host: ${{ env.EC2_HOST }}
           username: ${{ env.EC2_USER }}
           key: ${{ env.EC2_SSH_KEY }}
           script: |
-            echo "Pulling latest Docker image..."
+            echo "Moving to project directory on EC2 where compose.yaml exists..."
+            cd ${{ env.PROJECT_DIR_ON_EC2 }}
+
+            echo "Log in to Docker Hub..."
             docker login -u ${{ env.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
-            docker pull ${{ env.DOCKER_IMAGE_NAME }}:${{ github.sha }}
 
-            echo "Stopping existing container..."
-            docker stop siruchat-container || true # 컨테이너 이름은 원하는 대로 설정
-            docker rm siruchat-container || true   # 컨테이너 삭제
+            echo "Copying application source/build context to EC2..."
+            # GitHub Actions runner의 빌드된 프로젝트 파일을 EC2로 동기화
+            # compose.yaml이 있는 디렉토리에 Dockerfile과 build/libs 폴더가 있어야 합니다.
+            rsync -avz --exclude '.git' --exclude 'node_modules' --exclude '.gradle' "$GITHUB_WORKSPACE/" "${{ env.PROJECT_DIR_ON_EC2 }}/"
 
-            echo "Running new container with environment variables..."
-            # Spring Boot 애플리케이션에 필요한 환경 변수들을 -e 옵션으로 전달
-            docker run -d \
-              --name siruchat-container \
-              -p ${{ env.HOST_PORT }}:${{ env.APP_PORT }} \
-              -e MYSQL_HOST=${{ secrets.MYSQL_HOST }} \
-              -e MYSQL_DATABASE=${{ secrets.MYSQL_DATABASE }} \
-              -e MYSQL_USERNAME=${{ secrets.MYSQL_USERNAME }} \
-              -e MYSQL_PASSWORD=${{ secrets.MYSQL_PASSWORD }} \
-              -e RABBITMQ_HOST=${{ secrets.RABBITMQ_HOST }} \
-              -e RABBITMQ_PORT=${{ secrets.RABBITMQ_PORT }} \
-              -e RABBITMQ_USERNAME=${{ secrets.RABBITMQ_USERNAME }} \
-              -e RABBITMQ_PASSWORD=${{ secrets.RABBITMQ_PASSWORD }} \
-              -e REDIS_HOST=${{ secrets.REDIS_HOST }} \
-              -e REDIS_PASSWORD=${{ secrets.REDIS_PASSWORD }} \
-              -e MONGO_USERNAME=${{ secrets.MONGO_USERNAME }} \
-              -e MONGO_PASSWORD=${{ secrets.MONGO_PASSWORD }} \
-              -e MONGO_HOST=${{ secrets.MONGO_HOST }} \
-              -e MONGO_DB=${{ secrets.MONGO_DB }} \
-              -e JWT_SECRET=${{ secrets.JWT_SECRET }} \
-              ${{ env.DOCKER_IMAGE_NAME }}:${{ github.sha }}
+            echo "Stopping existing containers defined in compose.yaml..."
+            # 기존 컨테이너를 안전하게 중지 및 삭제
+            docker-compose -f compose.yaml down || true
 
+            echo "Starting containers with Docker Compose..."
+            # docker-compose.yaml에 필요한 환경 변수들을 전달
+            DOCKER_USERNAME=${{ env.DOCKER_USERNAME }} \
+            DOCKER_IMAGE_NAME=${{ env.DOCKER_IMAGE_NAME }} \
+            MYSQL_DATABASE=${{ secrets.MYSQL_DATABASE }} \
+            MYSQL_USERNAME=${{ secrets.MYSQL_USER }} \
+            MYSQL_PASSWORD=${{ secrets.MYSQL_PASSWORD }} \
+            MYSQL_ROOT_PASSWORD=${{ secrets.MYSQL_ROOT_PASSWORD }} \
+            RABBITMQ_USERNAME=${{ secrets.RABBITMQ_USERNAME }} \
+            RABBITMQ_PASSWORD=${{ secrets.RABBITMQ_PASSWORD }} \
+            REDIS_PASSWORD=${{ secrets.REDIS_PASSWORD }} \
+            MONGO_USERNAME=${{ secrets.MONGO_USERNAME }} \
+            MONGO_PASSWORD=${{ secrets.MONGO_PASSWORD }} \
+            MONGO_DB=${{ secrets.MONGO_DB }} \
+            JWT_SECRET=${{ secrets.JWT_SECRET }} \
+            docker-compose -f compose.yaml up -d --build siruchat # siruchat 서비스만 재빌드
             echo "Deployment complete."
