--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -5,6 +5,8 @@ on:
     branches:
       - dev
 
+  workflow_dispatch:
+
 env:
   DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
   DOCKER_IMAGE_NAME: ${{ secrets.DOCKER_USERNAME }}/siruchat-app
@@ -13,7 +15,7 @@ env:
   EC2_USER: ec2-user
   EC2_SSH_KEY: ${{ secrets.EC2_SSH_KEY }}
 
-  PROJECT_DIR_ON_EC2: /home/ec2-user/siruchat-project # 이 경로는 EC2의 실제 유저명과 일치해야 합니다.
+  PROJECT_DIR_ON_EC2: /home/ec2-user/siruchat-project # Dockerfile과 프로젝트 파일이 복사될 최종 위치
 
 jobs:
   build-and-push:
@@ -52,7 +54,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: build-and-push
     steps:
-      - name: Checkout code (to access Dockerfile for build context on EC2)
+      - name: Checkout code (to get Dockerfile and project files from repo)
         uses: actions/checkout@v4
 
       - name: Deploy with Docker Compose on EC2
@@ -62,19 +64,22 @@ jobs:
           username: ${{ env.EC2_USER }}
           key: ${{ env.EC2_SSH_KEY }}
           script: |
-            echo "Moving to project directory on EC2 where compose.yaml exists..."
-            mkdir -p ${{ env.PROJECT_DIR_ON_EC2 }}
-            cd ${{ env.PROJECT_DIR_ON_EC2 }}
+            echo "Creating project directory on EC2 if it doesn't exist..."
+            mkdir -p ${{ env.PROJECT_DIR_ON_EC2 }} # /home/ec2-user/siruchat-project 생성
+
+            echo "Moving to compose.yaml directory..."
+            cd /home/${{ env.EC2_USER }} # compose.yaml이 있는 곳으로 이동
 
             echo "Log in to Docker Hub..."
             docker login -u ${{ env.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
 
-            echo "Copying application source/build context to EC2..."
-            # rsync 소스 경로 수정: $GITHUB_WORKSPACE 뒤의 슬래시 제거
-            # rsync 대상 경로 수정: ${{ env.PROJECT_DIR_ON_EC2 }} 뒤의 슬래시 제거
-            rsync -avz --exclude '.git' --exclude 'node_modules' --exclude '.gradle' "$GITHUB_WORKSPACE" "${{ env.PROJECT_DIR_ON_EC2 }}"
+            echo "Copying application source/build context to EC2's project directory..."
+            # GitHub Actions 러너의 $GITHUB_WORKSPACE 내용을 ${{ env.PROJECT_DIR_ON_EC2 }} 안으로 복사
+            # 이렇게 하면 /home/ec2-user/siruchat-project/ 에 Dockerfile, build/libs 등 프로젝트 파일이 생깁니다.
+            rsync -avz --exclude '.git' --exclude 'node_modules' --exclude '.gradle' "$GITHUB_WORKSPACE/" "${{ env.PROJECT_DIR_ON_EC2 }}/"
 
             echo "Stopping existing containers defined in compose.yaml..."
+            # /home/ec2-user/compose.yaml 파일을 사용
             docker-compose -f compose.yaml down || true
 
             echo "Starting containers with Docker Compose..."
