--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -4,7 +4,6 @@ on:
   push:
     branches:
       - dev
-
   workflow_dispatch:
 
 env:
@@ -15,7 +14,7 @@ env:
   EC2_USER: ec2-user
   EC2_SSH_KEY: ${{ secrets.EC2_SSH_KEY }}
 
-  PROJECT_DIR_ON_EC2: /home/ec2-user/siruchat-project # Dockerfile과 프로젝트 파일이 복사될 최종 위치
+  PROJECT_DIR_ON_EC2: /home/ec2-user/siruchat-project
 
 jobs:
   build-and-push:
@@ -34,16 +33,16 @@ jobs:
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
 
-      - name: Build Spring Boot application with Gradle
+      - name: Build with Gradle
         run: ./gradlew bootJar
 
-      - name: Log in to Docker Hub
+      - name: Docker Hub Login
         uses: docker/login-action@v3
         with:
           username: ${{ env.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Build and push Docker image
+      - name: Build & Push Docker image
         uses: docker/build-push-action@v5
         with:
           context: .
@@ -54,35 +53,23 @@ jobs:
     runs-on: ubuntu-latest
     needs: build-and-push
     steps:
-      - name: Checkout code (to get Dockerfile and project files from repo)
+      - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Deploy with Docker Compose on EC2
+      - name: Deploy on EC2
         uses: appleboy/ssh-action@master
         with:
           host: ${{ env.EC2_HOST }}
           username: ${{ env.EC2_USER }}
           key: ${{ env.EC2_SSH_KEY }}
           script: |
-            echo "Creating project directory on EC2 if it doesn't exist..."
-            mkdir -p ${{ env.PROJECT_DIR_ON_EC2 }} # /home/ec2-user/siruchat-project 생성
-
-            echo "Moving to compose.yaml directory..."
-            cd /home/${{ env.EC2_USER }} # compose.yaml이 있는 곳으로 이동
-
-            echo "Log in to Docker Hub..."
+            echo "▶ Pull latest Docker image"
             docker login -u ${{ env.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
+            docker pull ${{ env.DOCKER_IMAGE_NAME }}:${{ github.sha }}
 
-            echo "Copying application source/build context to EC2's project directory..."
-            # GitHub Actions 러너의 $GITHUB_WORKSPACE 내용을 ${{ env.PROJECT_DIR_ON_EC2 }} 안으로 복사
-            # 이렇게 하면 /home/ec2-user/siruchat-project/ 에 Dockerfile, build/libs 등 프로젝트 파일이 생깁니다.
-            rsync -avz --exclude '.git' --exclude 'node_modules' --exclude '.gradle' "$GITHUB_WORKSPACE/" "${{ env.PROJECT_DIR_ON_EC2 }}/"
+            echo "▶ Run docker-compose up on EC2"
+            cd /home/ec2-user
 
-            echo "Stopping existing containers defined in compose.yaml..."
-            # /home/ec2-user/compose.yaml 파일을 사용
-            docker-compose -f compose.yaml down || true
-
-            echo "Starting containers with Docker Compose..."
             DOCKER_USERNAME=${{ env.DOCKER_USERNAME }} \
             DOCKER_IMAGE_NAME=${{ env.DOCKER_IMAGE_NAME }} \
             MYSQL_DATABASE=${{ secrets.MYSQL_DATABASE }} \
@@ -97,4 +84,3 @@ jobs:
             MONGO_DB=${{ secrets.MONGO_DB }} \
             JWT_SECRET=${{ secrets.JWT_SECRET }} \
             docker-compose -f compose.yaml up -d --build siruchat
-            echo "Deployment complete."
