메시지 전송 시 저장 부분을 새로운 큐를 통해 비동기로 저장하는 로직 추가

--- a/src/main/resources/application-local.yaml
+++ b/src/main/resources/application-local.yaml
@@ -29,6 +29,10 @@ spring:
       room:
         routing-key: chat.room.*
 
+      save:
+        queue: chat.save.queue
+        routing-key: chat.save.message
+
 
   data:
     redis:
